half way done with intial desktop build

--- a/index.html
+++ b/index.html
@@ -27,11 +27,45 @@
 
     <div class="container banner">
       <img src="./resources/images/banner.jpg" alt="student studying outside at a picnic table">
-      <div class="">
+      <div class="learn">
         <h1>Learn Something New Every Day</h1>
         <h2>Lorem ist von matter horn, sims speak like this</h2>
         <div class="button start">
           <p>Start Here</p>
+        </div>
+      </div>
+    </div>
+    <div class="container featured">
+      <div class="container bigfeature">
+        <img src="./resources/images/information-main.jpg" alt="man reading book in park">
+        <h1>It doesn't hurt to keep practicing</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis nibh ac justo sodales vestibulum. Nam ultricies nulla sed congue auctor. Donec fermentum vitae urna venenatis dictum. Nam in tristique sem, in suscipit nulla.</p>
+        <p style="font-style:italic;">Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+      <div class="containter smallfeature">
+        <div class="small">
+          <img src="./resources/images/information-Orientation.jpg" alt="people walking a path" id="toppicture">
+          <div class="smalltext">
+            <h1>Orientation Date</h1>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <p> <a href="#">Read More</a> </p>
+          </div>
+        </div>
+        <div class="small">
+          <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
+          <div class="smalltext">
+            <h1>Our Campus</h1>
+            <p>Find which campus is close by you</p>
+            <p> <a href="#">Read More</a> </p>
+          </div>
+        </div>
+        <div class="small">
+          <img src="./resources/images/information-guest-lecture.jpg" alt="bearded professor">
+          <div class="smalltext">
+            <h1>Our Guest Lecture</h1>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <p> <a href="#">Read More</a> </p>
+          </div>
         </div>
       </div>
     </div>
