--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <title>Colmar Academy</title>
   </head>
   <body>
     <header>
       <div class="container logo">
         <img src="./resources/images/ic-logo.svg" alt="Academy logo of a lion">
-        <h1>Colmar Academy</h1>
+        <h1>Colmar <span style="color:lightgrey;">Academy</h1>
       </div>
       <div class="container nav">
           <ol>
-            <li> <a href="#campus">On campus</a> </li>
-            <li> <a href="#online">Online</a> </li>
-            <li> <a href="#companies">For companies</a> </li>
-            <li> <a href="#signin">Sign in</a> </li>
+            <li class="desktopnav"> <a href="#campus">On campus</a> </li>
+            <li class="mobilenav"> <a href="#campus"> <img src="./resources/images/ic-on-campus.svg" alt=""> </a> </li>
+            <li class="desktopnav"> <a href="#online">Online</a> </li>
+            <li class="mobilenav"> <a href="#online"><img src="./resources/images/ic-online.svg" alt=""></a> </li>
+            <li class="desktopnav"> <a href="#companies">For companies</a> </li>
+            <li class="desktopnav"> <a href="#signin">Sign in</a> </li>
+            <li class="mobilenav"> <a href="#signin"><img src="./resources/images/ic-login.svg" alt=""></a> </li>
           </ol>
         </nav>
       </div>
@@ -26,15 +30,20 @@
 <!-- banner -->
 
     <div class="container banner">
-      <img src="./resources/images/banner.jpg" alt="student studying outside at a picnic table">
+      <div class="imagewrapper">
+        <img src="./resources/images/banner.jpg" alt="student studying outside at a picnic table">
+      </div>
       <div class="learn">
-        <h1>Learn Something New Every Day</h1>
+        <h1>Learn Something <br> New Everyday</h1>
         <h2>Lorem ist von matter horn, sims speak like this</h2>
         <div class="button start">
           <p>Start Here</p>
         </div>
       </div>
     </div>
+
+<!--  featured section -->
+
     <div class="container featured">
       <div class="container bigfeature">
         <img src="./resources/images/information-main.jpg" alt="man reading book in park">
@@ -69,5 +78,105 @@
         </div>
       </div>
     </div>
+
+<!--  Courses -->
+
+    <div class="startlearning">
+      <h1 class="learning">Start Learning</h1>
+      <div class="bigcourses">
+        <div class="courses">
+          <img src="./resources/images/course-software.jpg" alt="">
+          <div class="coursessmall">
+            <h1>Software Engineering</h1>
+            <p>COURSE</p>
+            <p>Web Development, Mobile Develpment, iOT APIs</p>
+          </div>
+        </div>
+        <div class="courses">
+          <img src="./resources/images/course-computer-art.jpg" alt="">
+          <div class="coursessmall">
+            <h1>Computer Art</h1>
+            <p>COURSE</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & visual Effects, Computer Animation</p>
+          </div>
+        </div>
+        <div class="courses">
+          <img src="./resources/images/course-design.jpg" alt="">
+          <div class="coursessmall">
+            <h1>Design</h1>
+            <p>COURSE</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+        </div>
+        <div class="courses">
+          <img src="./resources/images/course-data.jpg" alt="">
+          <div class="coursessmall">
+            <h1>Data</h1>
+            <p>COURSE</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+        </div>
+        <div class="courses">
+          <img src="./resources/images/course-business.jpg" alt="">
+          <div class="coursessmall">
+            <h1>Business</h1>
+            <p>COURSE</p>
+            <p>Product Develpment, Business Development, Startup</p>
+          </div>
+        </div>
+        <div class="courses">
+          <img src="./resources/images/course-marketing.jpg" alt="">
+          <div class="coursessmall">
+            <h1>Marketing</h1>
+            <p>COURSE</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!--  thesis section -->
+
+    <div class="thesis">
+      <h1>Thesis Exhibit</h1>
+      <div class="thesissections">
+        <div class="thesisleft">
+            <div class="videowrapper">
+              <video controls class="video" src="./resources/videos/thesis.mp4" type="video.mp4">
+              Your browser does not support the video tag.
+              </video>
+            </div>
+          <div class="videotext">
+            <h1>Reimagine Urban</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis nibh ac justo sodales vestibulum. Nam ultricies nulla sed congue auctor. Donec fermentum vitae urna venenatis dictum. Nam in tristique sem, in suscipit nulla.</p>
+          </div>
+        </div>
+        <div class="thesisright">
+          <div class="thesissmall">
+          <img src="./resources/images/thesis-fisma.jpg" alt="iphone helping make a design" id="toppicture">
+          <div class="thesistext">
+            <h1>Fisma: Design and Prototype</h1>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+          <div class="thesissmall">
+            <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building on a smoggy day">
+            <div class="thesistext">
+              <h1>Now and Then</h1>
+              <p>Research study about New York</p>
+            </div>
+        </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer">
+        <p>&copy 2016 Colmar Academy. All rights reserved</p>
+        <div class="termlinks">
+          <a href="#terms">Terms</a>
+          <a href="#privacy">Privacy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
